Added Olympiads tab

--- a/code/src/.conf
+++ b/code/src/.conf
@@ -1,5 +1,5 @@
-db.serverType=
-db.serverAddress=
-db.login=
-db.password=
-db.baseName=
+db.serverType=MSServer
+db.serverAddress=localhost
+db.login=sa
+db.password=yourStrong(1)Password
+db.baseName=Abiturient
