--- a/code/.conf
+++ b/code/.conf
@@ -1,5 +1,5 @@
 db.serverType=MSServer
 db.serverAddress=localhost
 db.login=sa
-db.password=yourStrong(1)Password
+db.password=Dckerpass1010
 db.baseName=Abiturient
